syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "group.proto";

message GetGroupRequest {
	google.protobuf.StringValue group_id = 1 [(validator.field) = {msg_exists: true}];
}

message GetGroupResponse {
	Group group = 1;
}
